--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,32 @@
 aiofiles==23.2.1
 aiohttp==3.9.1
 aiosignal==1.3.1
+amqp==5.2.0
+annotated-types==0.6.0
+anyio==4.2.0
 astroid==3.0.2
 asyncio==3.4.3
 attrs==23.2.0
 beautifulsoup4==4.12.2
+billiard==4.2.0
 black==23.12.1
 bs4==0.0.1
+celery==5.3.6
 certifi==2023.11.17
 charset-normalizer==3.3.2
 click==8.1.7
+click-didyoumean==0.3.0
+click-plugins==1.1.1
+click-repl==0.3.0
 dill==0.3.7
+fastapi==0.109.0
+flower==2.0.1
 frozenlist==1.4.1
+h11==0.14.0
+humanize==4.9.0
 idna==3.6
 isort==5.13.2
+kombu==5.3.5
 lxml==5.1.0
 mccabe==0.7.0
 multidict==6.0.4
@@ -21,10 +34,26 @@ mypy-extensions==1.0.0
 packaging==23.2
 pathspec==0.12.1
 platformdirs==4.1.0
+prometheus-client==0.19.0
+prompt-toolkit==3.0.43
+pydantic==2.5.3
+pydantic_core==2.14.6
 pylint==3.0.3
+python-dateutil==2.8.2
+pytz==2023.3.post1
+redis==5.0.1
 requests==2.31.0
 ruff==0.1.11
+six==1.16.0
+sniffio==1.3.0
 soupsieve==2.5
+starlette==0.35.1
 tomlkit==0.12.3
+tornado==6.4
+typing_extensions==4.9.0
+tzdata==2023.4
 urllib3==2.1.0
+uvicorn==0.25.0
+vine==5.1.0
+wcwidth==0.2.13
 yarl==1.9.4
