added localstack changes, and task to upload to localstack s3

--- a/requirements.txt
+++ b/requirements.txt
@@ -48,6 +48,7 @@ mccabe==0.7.0
 mdurl==0.1.2
 multidict==6.0.4
 mypy-extensions==1.0.0
+orjson==3.9.10
 packaging==23.2
 pathspec==0.12.1
 pbr==6.0.0
