--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,12 +38,12 @@ services:
       - .:/app
     depends_on:
       - redis
-  flower:
-    container_name: flower
-    build: .
-    command: celery -A tasks.crawl  flower --port=5555
-    ports:
-      - 5556:5555
-    depends_on:
-      - redis
-      - celery_worker
+  # flower:
+  #   container_name: flower
+  #   build: .
+  #   command: celery -A tasks.crawl  flower --port=5555
+  #   ports:
+  #     - 5556:5555
+  #   depends_on:
+  #     - redis
+  #     - celery_worker
